--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,10 +8,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- FUENTES -->
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
 
     <title>RedProf</title>
   </head>
