Cambios en p json

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
 
-    <title>RedProf</title>
+    <title>Redemplear</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
