Agrego cosas a Home

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
     <style>
       .leaflet-container {
-          height: 400px;
-          width: 800px;
+          height: 100%;
+          width: 100%;
       }
     </style>
     <title>Redemplear</title>
